--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,14 +1,18 @@
 /* Fonts */
-$site-font: 'Open Sans', sans-serif;
+$roboto: 'Roboto', sans-serif;
+$serif: 'PT Serif', serif;
+
+
+/* Color */
+$default: #2b2a28;
+
+$black: #000;
+$dark: #333;
+$soft: #545454;
+
+
 
 /* Bkg colors */
 $soft-grey: #f1f1f1;
 $button: #ff9800;
 $menu: #cff6f6;
-
-/* Color */
-$paragraph: #545454;
-$header-grey: #757676;
-$site-main: #696969;
-$link: #007f7e;
-$link-orange: #f57c00;
