--- a/sass/css.scss
+++ b/sass/css.scss
@@ -3,15 +3,18 @@
 @import "../node_modules/slick-carousel/slick/slick-theme.scss";
 @import "../node_modules/jquery-fancybox/source/scss/jquery.fancybox.scss";
 
+@import 'https://fonts.googleapis.com/css?family=PT+Serif:400,400i,700,700i|Roboto:300,300i,400,400i,500,500i,700,700i';
+
 @import "mixins";
 @import "variables";
 @import "common";
 @import "header";
 @import "menu";
-@import "slider";
+@import "scroll";
 @import "main";
 @import "aside";
 @import "footer";
+
 
 
 
